# randomization_tests

./: .commit_msg.txt  .git-commit-msg.txt  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  _commit_msg.txt  environment.yml  plan-confidenceIntervals.prompt.md  plan-unifiedMixedModel.prompt.md  pyproject.toml  randomization_tests.py
.github/workflows/: ci.yml
benchmarks/: permutation-dedup-performance.md  profile_dedup.py  profile_endtoend.py  profile_realworld.py  profile_reml_solvers.py
benchmarks/image/realworld-profile/: validity_report.txt
benchmarks/results/: dedup_profile.csv  endtoend_profile.csv  realworld_profile.csv
benchmarks/summaries/: permutation-dedup-performance.md
docs/: API.md  QUICKSTART.md  ROADMAP.md
examples/: linear_multilevel_regression.py  linear_regression.py  logistic_multilevel_regression.py  logistic_regression.py  multinomial_regression.py  negative_binomial_regression.py  ordinal_regression.py  poisson_multilevel_regression.py  poisson_regression.py
research/: test_henderson_reml.py
src/randomization_tests/: __init__.py  _compat.py  _config.py  _context.py  _jax.py  _results.py  _typing.py  confounders.py  core.py  diagnostics.py  display.py  engine.py  families.py  families_mixed.py  permutations.py  pvalues.py
src/randomization_tests/_backends/: __init__.py  _jax.py  _numpy.py
src/randomization_tests/_strategies/: __init__.py  freedman_lane.py  kennedy.py  score.py  ter_braak.py
tests/: _verify_gate.py  test_batch_fit_and_score.py  test_compat.py  test_confidence_intervals.py  test_config.py  test_confounders.py  test_convergence.py  test_core.py  test_diagnostics.py  test_display.py  test_edge_cases.py  test_engine.py  test_families.py  test_families_mixed.py  test_integration.py  test_jax_convergence.py  test_permutations.py  test_pvalues.py  test_score_strategy.py  test_smoke.py
tests/verify_gates/: _verify_gate_v0.4.1_restricted_swap.py
